Update LiveProbes JDI to support asyn class target

--- a/LiveFromDAP/performance/Makefile
+++ b/LiveFromDAP/performance/Makefile
@@ -29,5 +29,5 @@ scenario/binary_search_javascript_times.json : scenario/evaluate_javascript.py
 .PHONY : clean
 
 clean :
-	rm -f *.csv
+	find . -name "*.csv" | grep -v jdi_times.csv | xargs rm
 	rm -f scenario/*.json
