Fix tree-sitter version

--- a/LiveFromDAP/requirements.txt
+++ b/LiveFromDAP/requirements.txt
@@ -1,6 +1,7 @@
+setuptools
 debugpy
 pycparser
 pandas
 flask_socketio
-tree_sitter
+tree_sitter==0.21.3
 -e git+https://github.com/jbdoderlein/javalang#egg=javalang
