--- a/testmonitoringpy/monitor_config.json
+++ b/testmonitoringpy/monitor_config.json
@@ -3,7 +3,7 @@
     "tool_name": "livemonitor",
     "monitor": {
         "search.py": ["binary_search"],
-        "test.py": ["test"]
+        "test.py": ["test", "add"]
     },
     "output": {
         "file": "data.jsonl"
