--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,6 @@ LiveFromDAP/**/tmp/*
 LiveFromDAP/src/livefromdap/bin/*
 !LiveFromDAP/src/livefromdap/bin/.ignore
 
-.vscode/
 
 LiveFromDAP/src/livefromdap/target/**/*.so 
 LiveFromDAP/src/livefromdap/target/**/*.class
@@ -82,3 +81,5 @@ paper/*.run.xml
 JavaProbes/tmp/*
 !JavaProbes/tmp/.ignore
 paper/paper.pdf
+
+testmonitoring/__pycache__/*
