Add code examples and visualization tools for execution tracing
This commit introduces several new components:
- Code examples for binary search, bubble sort, and Flask API
- Trace visualization tools (sort_visu and trace_explorer)
- Monitoring package with configuration and graph generation
- VSCode extension improvements for execution tracking

The changes include:
- New monitoring configuration and data collection
- Interactive web-based trace exploration interfaces
- Example implementations with monitoring instrumentation
- Enhanced VSCode extension for function execution insights

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -18,15 +18,37 @@
       {
         "command": "livefromdap.showPanel",
         "title": "Show LiveFromDAP Panel"
+      },
+      {
+        "command": "extension.showExecutions",
+        "title": "Show Function Executions"
+      },
+      {
+        "command": "extension.loadDataFile",
+        "title": "Load Data File"
+      },
+      {
+        "command": "extension.loadDataFileFromContext",
+        "title": "Import as Data File"
       }
-    ]
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "resourceExtname == .jsonl",
+          "command": "extension.loadDataFileFromContext",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/vscode": "^1.86.0",
