--- a/LiveFromDAP/pyproject.toml
+++ b/LiveFromDAP/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "flask_socketio",
     "pandas",
     "tree_sitter",
-    "gopygo"
+    "gopygo",
+    "requests"
 ]
 
 [build-system]
