--- a/LiveFromDAP/requirements.txt
+++ b/LiveFromDAP/requirements.txt
@@ -9,6 +9,6 @@ tree-sitter-c==0.23.0
 tree-sitter-javascript==0.23.1
 tree-sitter-java==0.23.5
 tree-sitter-go==0.23.4
-
 gopygo
 -e git+https://github.com/jbdoderlein/javalang#egg=javalang
+-e git+https://github.com/jbdoderlein/PyMonitor#egg=monitoringpy
